[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme/h1.tres" type="Theme" id=1]
[ext_resource path="res://menu/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/CreditsLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/StageClearedMenu.gd" type="Script" id=5]

[node name="Menu" instance=ExtResource( 2 )]
script = ExtResource( 5 )
aktivate_pause = false

[node name="C" parent="." index="2"]
margin_left = 131.0
margin_top = 68.0
margin_right = -131.0
margin_bottom = -68.0

[node name="VC" parent="C/MC" index="0"]
margin_right = 204.0
margin_bottom = 120.0

[node name="Header" type="Label" parent="C/MC/VC" index="0"]
margin_top = 11.0
margin_right = 204.0
margin_bottom = 33.0
theme = ExtResource( 1 )
text = "- Stage Cleared -"
align = 1
uppercase = true

[node name="Control2" type="Control" parent="C/MC/VC" index="1"]
margin_top = 38.0
margin_right = 204.0
margin_bottom = 38.0

[node name="CreditsLabel" parent="C/MC/VC" index="2" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 43.0
margin_right = 204.0
margin_bottom = 60.0
countUp = true

[node name="Control" type="Control" parent="C/MC/VC" index="3"]
margin_top = 65.0
margin_right = 204.0
margin_bottom = 65.0

[node name="BtnNextStage" parent="C/MC/VC" index="4" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 70.0
margin_right = 204.0
margin_bottom = 87.0
labelText = "Next Stage"
startFocus = true

[node name="BtnShop" parent="C/MC/VC" index="5" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 92.0
margin_right = 204.0
margin_bottom = 109.0
labelText = "Shop"

[connection signal="count_up_done" from="C/MC/VC/CreditsLabel" to="." method="_on_CreditsLabel_count_up_done"]
[connection signal="pressed" from="C/MC/VC/BtnNextStage" to="." method="_on_BtnNextStage_pressed"]
[connection signal="pressed" from="C/MC/VC/BtnShop" to="." method="_on_BtnShop_pressed"]
